@startuml

title __DATABASE's Class Diagram__\n

  package com.sinhvien.quanlychitieu {
    package com.sinhvien.quanlychitieu.Database {
      class HanMuc {
          ~ _id : int
          ~ soTien : int
          ~ tenHanMuc : String
          ~ imageHangMuc : String
          ~ tenHangMuc : String
          ~ imageViTien : String
          ~ tenViTien : String
          ~ ngayBatDau : String
          ~ ngayKetThuc : String
          ~ trangThai : int
          ~ _idViTien : int
          + HanMuc()
          + HanMuc()
          + get_id()
          + set_id()
          + getSoTien()
          + setSoTien()
          + getTenHanMuc()
          + setTenHanMuc()
          + getImageHangMuc()
          + setImageHangMuc()
          + getTenHangMuc()
          + setTenHangMuc()
          + getImageViTien()
          + setImageViTien()
          + getTenViTien()
          + setTenViTien()
          + getNgayBatDau()
          + setNgayBatDau()
          + getNgayKetThuc()
          + setNgayKetThuc()
          + getTrangThai()
          + setTrangThai()
          + get_idViTien()
          + set_idViTien()
      }
    }
  }
  

  package com.sinhvien.quanlychitieu {
    package com.sinhvien.quanlychitieu.Database {
      class HanMucHelper {
          {static} - TEN_DATABASE : String
          {static} + TEN_BANG_HANMUC : String
          {static} + COT_ID : String
          {static} + COT_SOTIEN : String
          {static} + COT_TEN_HAN_MUC : String
          {static} + COT_IMAGE_HANGMUC : String
          {static} + COT_TEN_HANGMUC : String
          {static} + COT_IMAGE_VITIEN : String
          {static} + COT_TEN_VITIEN : String
          {static} + COT_NGAY_BATDAU : String
          {static} + COT_NGAY_KETTHUC : String
          {static} + COT_TRANGTHAI : String
          {static} + COT_ID_VITIEN : String
          {static} - TAO_BANG_HANMUC : String
          + HanMucHelper()
          + onCreate()
          + onUpgrade()
          + getdata()
          + insertHanMuc()
          + updateTrangThaiHanMuc()
          + deleteHanMucByIDViTien()
      }
    }
  }
  

  package com.sinhvien.quanlychitieu {
    package com.sinhvien.quanlychitieu.Database {
      class HangMuc {
          - image : int
          - tenHangMuc : String
          + HangMuc()
          + HangMuc()
          + getImage()
          + getTenHangMuc()
          + setImage()
          + setTenHangMuc()
      }
    }
  }
  

  package com.sinhvien.quanlychitieu {
    package com.sinhvien.quanlychitieu.Database {
      class LoaiTaiKhoan {
          - tenLoai : String
          - img_URL : int
          + LoaiTaiKhoan()
          + getTenLoai()
          + getImg()
          + setTenLoai()
          + setImg()
      }
    }
  }
  

  package com.sinhvien.quanlychitieu {
    package com.sinhvien.quanlychitieu.Database {
      class TaiKhoan {
          - _id : int
          - soTien : int
          - tenTaiKhoan : String
          - Imgage : String
          - loaiTaiKhoan : String
          - chuThich : String
          + TaiKhoan()
          + TaiKhoan()
          + get_id()
          + set_id()
          + getSoTien()
          + setSoTien()
          + getTenTaiKhoan()
          + setTenTaiKhoan()
          + getImgage()
          + setImgage()
          + getLoaiTaiKhoan()
          + setLoaiTaiKhoan()
          + getChuThich()
          + setChuThich()
      }
    }
  }
  

  package com.sinhvien.quanlychitieu {
    package com.sinhvien.quanlychitieu.Database {
      class TaiKhoanHelper {
          {static} - TEN_DATABASE : String
          {static} + TEN_BANG_TAIKHOAN : String
          {static} + COT_ID : String
          {static} + COT_TEN_TAIKHOAN : String
          {static} + COT_SO_TIEN : String
          {static} + COT_LOAI_TAI_KHOAN : String
          {static} + COT_CHU_THICH : String
          {static} + COT_HINH_ANH : String
          {static} - TAO_BANG_TAIKHOAN : String
          + TaiKhoanHelper()
          + onCreate()
          + onUpgrade()
          + insertdata()
          + getdata()
          + tongTien()
          + xuLy()
          + xuLyUpdate()
          + updateTaiKhoan()
          + deleteTaiKhoan()
      }
    }
  }
  

  package com.sinhvien.quanlychitieu {
    package com.sinhvien.quanlychitieu.Database {
      class ThuChi {
          + _id : int
          + sotien : String
          - imageHangMuc : String
          - tenHangMuc : String
          - mota : String
          - ngaythang : String
          - imageViTien : String
          - tenViTien : String
          - trangThai : int
          - _idViTien : int
          + ThuChi()
          + ThuChi()
          + get_id()
          + set_id()
          + getSotien()
          + setSotien()
          + getImageHangMuc()
          ~ setImageHangMuc()
          + getTenHangMuc()
          ~ setTenHangMuc()
          + getMota()
          ~ setMota()
          + getNgaythang()
          ~ setNgaythang()
          + getImageViTien()
          ~ setImageViTien()
          + getTenViTien()
          ~ setTenViTien()
          + getTrangThai()
          ~ setTrangThai()
          + get_idViTien()
          ~ set_idViTien()
      }
    }
  }
  

  package com.sinhvien.quanlychitieu {
    package com.sinhvien.quanlychitieu.Database {
      class ThuChiHelper {
          {static} - TEN_DATABASE : String
          {static} + TEN_BANG_THUCHI : String
          {static} + COT_ID : String
          {static} + COT_SOTIEN : String
          {static} + COT_IMAGE_HANGMUC : String
          {static} + COT_LOAI_HANGMUC : String
          {static} + COT_MOTA : String
          {static} + COT_NGAYTHANG : String
          {static} + COT_IMAGE_VITIEN : String
          {static} + COT_TEN_VITIEN : String
          {static} + COT_TRANGTHAI : String
          {static} + COT_ID_VITIEN : String
          {static} - TAO_BANG_THUCHI : String
          + ThuChiHelper()
          + onCreate()
          + onUpgrade()
          + getdata()
          + getTongTien()
          + insertThuChi()
          + updateThuChi()
          + deleteThuChi()
          + deleteByViTienID()
          + getTienHanMuc()
      }
    }
  }
  

  HanMucHelper -up-|> SQLiteOpenHelper
  LoaiTaiKhoan -up-|> Serializable
  TaiKhoanHelper -up-|> SQLiteOpenHelper
  ThuChiHelper -up-|> SQLiteOpenHelper


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
